--- a/index.html
+++ b/index.html
@@ -667,19 +667,42 @@
       </section>
       <!--#endregion Products-->
       <!--#region Top-->
-      <section class="top">
+      <section class="top hide">
         <div class="container">
           <h2 class="top-title"><span class="top-word">Top</span> sellers</h2>
           <ul class="top-list">
             <li class="top-item">
               <div class="top-item-img">
-                <img
-                  class="top-img"
-                  src="./images/topsellers/img-1.jpg"
-                  alt="CHOCOLATE WITH NUTS"
-                  width="368"
-                  height="464"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/topsellers/img-1_desk@1x.jpg 1x,
+                      ./images/topsellers/img-1_desk@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/topsellers/img-1_tab@1x.jpg 1x,
+                      ./images/topsellers/img-1_tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/topsellers/img-1_mob@1x.jpg 1x,
+                      ./images/topsellers/img-1_mob@2x.jpg 2x
+                    "
+                    media="(min-width: 320px)"
+                  />
+                  <img
+                    class="top-img"
+                    src="./images/topsellers/img-1.jpg"
+                    alt="CHOCOLATE WITH NUTS"
+                    width="368"
+                    height="464"
+                  />
+                </picture>
                 <p class="top-img-text">
                   Chocolate with nuts is a delectable combination that brings
                   together the smoothness of chocolate and the crunchiness of
@@ -694,13 +717,29 @@
             </li>
             <li class="top-item">
               <div class="top-item-img">
-                <img
-                  class="top-img"
-                  src="./images/topsellers/img-2.jpg"
-                  alt="CHOCOLATE WITH FRUITS"
-                  width="368"
-                  height="464"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/topsellers/img-2_desk@1x.jpg 1x,
+                      ./images/topsellers/img-2_desk@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/topsellers/img-2_tab@1x.jpg 1x,
+                      ./images/topsellers/img-2_tab@2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <img
+                    class="top-img"
+                    src="./images/topsellers/img-2.jpg"
+                    alt="CHOCOLATE WITH FRUITS"
+                    width="368"
+                    height="464"
+                  />
+                </picture>
                 <p class="top-img-text">
                   Chocolate with fruit is an unbeatable combination of two of
                   the tastiest things in the world. This dessert combines
@@ -714,13 +753,22 @@
             </li>
             <li class="top-item">
               <div class="top-item-img">
-                <img
-                  class="top-img"
-                  src="./images/topsellers/img-3.jpg"
-                  alt="DARK CHOCOLATE"
-                  width="368"
-                  height="464"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/topsellers/img-3_desk@1x.jpg 1x,
+                      ./images/topsellers/img-3_desk@2x.jpg 2x
+                    "
+                    media="(min-width: 1200px)"
+                  />
+                  <img
+                    class="top-img"
+                    src="./images/topsellers/img-3.jpg"
+                    alt="DARK CHOCOLATE"
+                    width="368"
+                    height="464"
+                  />
+                </picture>
                 <p class="top-img-text">
                   Dark chocolate is a rich and indulgent treat that is beloved
                   by many chocolate enthusiasts. It is made from cocoa beans,
@@ -738,7 +786,7 @@
       </section>
       <!--#endregion Top-->
       <!--#region Reviews-->
-      <section id="reviews" class="reviews hide">
+      <section id="reviews" class="reviews">
         <div class="container">
           <h2 class="reviews-title">
             <span class="reviews-word">Chocolate</span> is loved
