Update index styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!--#region Header-->
-    <header class="header hide">
+    <header class="header">
       <div class="container">
         <nav class="header-nav">
           <a href="./index.html" class="logo header-logo"
@@ -91,7 +91,7 @@
     <!--#endregion Header-->
     <main>
       <!--#region Hero-->
-      <section class="hero hide">
+      <section class="hero">
         <div class="container">
           <h1 class="hero-title">
             Treat yourself or a loved one to our finest ingredients for a moment
@@ -120,7 +120,7 @@
       </section>
       <!--#endregion Hero-->
       <!--#region Benefits-->
-      <section class="benefits hide">
+      <section class="benefits">
         <div class="container">
           <h2 class="visually-hidden">Chocolate Benefits</h2>
           <ul class="benefits-list">
@@ -172,7 +172,7 @@
       </section>
       <!--#endregion Describtion-->
       <!--#region Ingredients-->
-      <section class="ingredients hide">
+      <section class="ingredients">
         <div class="container">
           <h2 class="ingredients-title">
             It all adds up to one exceptional
@@ -437,7 +437,7 @@
       </section>
       <!--#endregion Ingredients-->
       <!--#region Instruction-->
-      <section id="made" class="instruction hide">
+      <section id="made" class="instruction">
         <div class="container">
           <h2 class="instruction-title">
             How it's <span class="instruction-word">made</span>?
@@ -512,7 +512,7 @@
       </section>
       <!--#endregion Instruction-->
       <!--#region Products-->
-      <section class="products hide">
+      <section class="products">
         <div class="container">
           <h2 class="products-title">
             Our <span class="products-word">products</span>
@@ -667,7 +667,7 @@
       </section>
       <!--#endregion Products-->
       <!--#region Top-->
-      <section class="top hide">
+      <section class="top">
         <div class="container">
           <h2 class="top-title"><span class="top-word">Top</span> sellers</h2>
           <ul class="top-list">
@@ -855,7 +855,7 @@
       <!--#endregion Reviews-->
     </main>
     <!-- #region Footer -->
-    <footer class="footer hide">
+    <footer class="footer">
       <div class="container">
         <div class="footer-cont">
           <h2 class="footer-title">
@@ -951,7 +951,10 @@
           </svg>
         </button>
         <p class="modal-caption">
-          LEAVE A REVIEW ABOUT <span class="modal-word">OUR CHOCOLATE</span>
+          LEAVE A REVIEW
+          <span class="modal-block"
+            >ABOUT <span class="modal-word">OUR CHOCOLATE</span></span
+          >
         </p>
         <form class="modal-form" name="review_form" autocomplete="on">
           <div class="modal-wrapper">
@@ -968,10 +971,10 @@
                 pattern="[a-zA-Z]+\s[a-zA-Z]+"
                 title="Phrase should include 2 words separated by coma"
               />
-              <svg class="modal-field-icon orange" width="24" height="24">
+              <svg class="modal-field-icon orange" width="18" height="18">
                 <use href="./images/icons.svg#icon-user"></use>
               </svg>
-              <svg class="modal-valid-icon" width="24" height="24">
+              <svg class="modal-valid-icon" width="18" height="18">
                 <use class="error" href="./images/icons.svg#error"></use>
                 <use class="success" href="./images/icons.svg#success"></use>
               </svg>
@@ -990,7 +993,7 @@
                 name="user_email"
                 required
               />
-              <svg class="modal-field-icon" width="24" height="24">
+              <svg class="modal-field-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
             </div>
@@ -1005,7 +1008,7 @@
                 name="user_number"
                 required
               />
-              <svg class="modal-field-icon" width="24" height="24">
+              <svg class="modal-field-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -1038,10 +1041,12 @@
                 <use href="./images/icons.svg#icon-check"></use>
               </svg>
             </span>
-            I accept the terms and conditions of the&nbsp;
-            <a class="agreement-checkbox-link" href="#" target="_blank"
-              >Privacy Policy</a
-            >
+            <span class="agreement-text">
+              I accept the terms and conditions of the&nbsp;
+              <a class="agreement-checkbox-link" href="#" target="_blank"
+                >Privacy Policy</a
+              >
+            </span>
           </label>
           <button type="submit" class="btn btn-accent">Send</button>
         </form>
