--- a/index.html
+++ b/index.html
@@ -936,7 +936,9 @@
           </nav>
           <form class="footer-subscribe">
             <input type="email" placeholder="Enter your email" required />
-            <button class="footer-button" type="submit">Subscribe</button>
+            <button class="footer-button btn-accent" type="submit">
+              Subscribe
+            </button>
           </form>
         </div>
       </div>
